Production/Production/src/objects/Payment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <formula>Billing_Account__r.Account_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Key__c</fullName>
        <formula>Billing_Account__r.Account_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle__c</fullName>
        <formula>Billing_Account__r.Bill_Cycle_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Billing_Account__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Limit__c</fullName>
        <formula>Billing_Account__r.Call_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Path__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Path</label>
        <referenceTo>Collection_Path__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <formula>Billing_Account__r.Customer_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAYS_121_150__c</fullName>
        <formula>Billing_Account__r.DAYS_121_150__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAYS 121-150</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAYS_151_180__c</fullName>
        <formula>Billing_Account__r.DAYS_151_180__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAYS 151-180</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAYS_181_210__c</fullName>
        <formula>Billing_Account__r.DAYS_181_210__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAYS 181-210</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Installment__c</fullName>
        <label>Date of First Installment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Imminent_Credit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Imminent Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Imminent_Debit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Imminent Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Include_Additional_MRC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Additional MRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Due_Date__c</fullName>
        <description>Holds the Due Date of the last Line Item. Populated by code, required to check if any PPs existed in the last 6 months</description>
        <label>Last Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MRC1__c</fullName>
        <label>MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRC__c</fullName>
        <formula>Billing_Account__r.MRC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Call_Limit__c</fullName>
        <defaultValue>$Setup.Collections_Settings__c.PP_Call_Limit__c</defaultValue>
        <label>New Call Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_off_Payment_Due__c</fullName>
        <formula>One_off_Payment__c -  One_off_Payment_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One off Payment Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_off_Payment_Received__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>One off Payment Received</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_off_Payment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One off Payment</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &apos;Saved&apos;) , &apos;Not Active&apos;, 
	 IF(ISPICKVAL(Status__c,  &apos;Pending Approval&apos;), &apos;Not Active&apos;, 
                 IF(ISPICKVAL(Status__c,  &apos;Open&apos;) &amp;&amp; Billing_Account__r.Payment_Defaulted__c, &apos;Defaulted&apos;, 
		        IF( ISPICKVAL(Status__c,  &apos;Open&apos;), &apos;Active&apos;, 
			         IF(ISPICKVAL(Status__c, &apos;Closed&apos;), IF(Total_Paid__c &gt;= 0.95* Total_Payable__c , &apos;Success&apos;, &apos;Defaulted&apos;), &apos;Defaulted&apos;)
 		           )
                 )  
 	 )  
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>Billing_Account__r.Payment_Method_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Payment Plan Unique Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Method__c</fullName>
        <label>Preferred Communication Method</label>
        <picklist>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Number__c</fullName>
        <label>Preferred Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Proposed_Frequency__c</fullName>
        <label>Proposed Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Term__c</fullName>
        <label>Proposed Term (months)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Due__c</fullName>
        <formula>Total_Payable__c - Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_LL__c</fullName>
        <label>Total Paid(LL)</label>
        <summarizedField>Payment_Plan_Line_Item__c.Amount_Paid__c</summarizedField>
        <summaryForeignKey>Payment_Plan_Line_Item__c.Payment_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <formula>One_off_Payment_Received__c + Total_Paid_LL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payable_LL__c</fullName>
        <label>Total Payable(LL)</label>
        <summarizedField>Payment_Plan_Line_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Payment_Plan_Line_Item__c.Payment_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payable__c</fullName>
        <formula>Total_Payable_LL__c + One_off_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled_Amount__c</fullName>
        <formula>Billing_Account__r.UNBILLED_AMOUNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unbilled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_New_Call_Limit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Describes whether the New Call Limit was part of the PP calculations</description>
        <label>Use New Call Limit</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Call_limit_cannot_be_zero</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($Setup.No_Validations__c.Flag__c) &amp;&amp;
(New_Call_Limit__c  &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Billing_Account__c</errorDisplayField>
        <errorMessage>Call limit cannot be zero or negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Installment_Date_Within_X_days</fullName>
        <active>true</active>
        <description>The first instalment date is over acceptable tolerance.</description>
        <errorConditionFormula>NOT($Setup.No_Validations__c.Flag__c) &amp;&amp; (
 IF(One_off_Payment__c &gt; 0, Date_of_First_Installment__c &gt; TODAY() + $Setup.Collections_Settings__c.Payment_Days_from_Now_Tolerance_Oneoff__c, Date_of_First_Installment__c &gt; TODAY() + $Setup.Collections_Settings__c.Payment_Days_from_Now_Tolerance__c ) 
)</errorConditionFormula>
        <errorMessage>The first instalment date has to be within the specified amount of  days from now.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Phone_Number_if_Provided</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK( Preferred_Contact_Number__c )), NOT(REGEX( Preferred_Contact_Number__c, &quot;\\+?[\\d\\-\\s]+&quot;)))</errorConditionFormula>
        <errorMessage>The Preferred Phone Number you have provided does not have the required format. Only numbers, - and spaces are allowed, and the number may start with + or not.</errorMessage>
    </validationRules>
</CustomObject>